--- a/source/_patterns/02-organisms/00-global/00-header.mustache
+++ b/source/_patterns/02-organisms/00-global/00-header.mustache
@@ -2,8 +2,8 @@
 <header class="header cf" role="banner">
 	{{> atoms-logo }}
 	<p class="title">Los Angeles Innovation and Performance Commission</p>
-	<a href="#search-form" class="nav-toggle nav-toggle-search icon-search"><span class="is-vishidden">Search</span></a>
-	<a href="#nav" class="nav-toggle nav-toggle-menu icon-menu"><span class="is-vishidden">Menu</span></a>
+<!-- 	<a href="#search-form" class="nav-toggle nav-toggle-search icon-search"><span class="is-vishidden">Search</span></a>
+	<a href="#nav" class="nav-toggle nav-toggle-menu icon-menu"><span class="is-vishidden">Menu</span></a> -->
 	{{> molecules-primary-nav }}
 	<!--{{> molecules-search }}-->
 </header>
