--- a/source/css/style.css
+++ b/source/css/style.css
@@ -914,16 +914,16 @@ td {
 /* line 27, scss/objects/_header.scss */
 .title {
   color: #fff;
-  font-size: 1.625em;
-  line-height: 1.15384615em;
+  font-size: 1em;
+  line-height: 1.25em;
 }
 @media all and (min-width: 720px) {
   /* line 27, scss/objects/_header.scss */
   .title {
-    font-size: 2em;
+    font-size: 1.75em;
     line-height: 1.25em;
     width: 45%;
-    margin: 1.125% 0 1.125% 1.5%;
+    margin: 2.75% 0 0 1.5%;
     float: left;
   }
 }
@@ -987,18 +987,25 @@ td {
 }
 /* line 12, scss/objects/_nav.scss */
 .nav .nav-links {
-  margin-left: 1em;
+  display: none;
 }
-/* line 14, scss/objects/_nav.scss */
-.nav .nav-links li {
-  padding-right: 0.5em;
-  padding-top: 0.25em;
+@media all and (min-width: 480px) {
+  /* line 12, scss/objects/_nav.scss */
+  .nav .nav-links {
+    display: inherit;
+    margin-left: 1em;
+  }
+  /* line 17, scss/objects/_nav.scss */
+  .nav .nav-links li {
+    padding-right: 0.5em;
+    padding-top: 0.25em;
+  }
+  /* line 20, scss/objects/_nav.scss */
+  .nav .nav-links li a {
+    color: #fff;
+  }
 }
-/* line 17, scss/objects/_nav.scss */
-.nav .nav-links li a {
-  color: #fff;
-}
-/* line 22, scss/objects/_nav.scss */
+/* line 26, scss/objects/_nav.scss */
 .nav .nav-button {
   display: block;
   text-align: center;
@@ -1013,15 +1020,15 @@ td {
   -o-border-radius: 8px;
   border-radius: 8px;
 }
-/* line 34, scss/objects/_nav.scss */
+/* line 38, scss/objects/_nav.scss */
 .nav img {
   height: 1.6em;
 }
-/* line 40, scss/objects/_nav.scss */
+/* line 44, scss/objects/_nav.scss */
 .nav a {
   border-top: 1px solid #E0E0E0;
 }
-/* line 45, scss/objects/_nav.scss */
+/* line 49, scss/objects/_nav.scss */
 .nav.active {
   max-height: 40em;
 }
@@ -1032,30 +1039,30 @@ td {
     float: right;
     clear: none;
   }
-  /* line 54, scss/objects/_nav.scss */
+  /* line 58, scss/objects/_nav.scss */
   .nav li {
     float: left;
   }
-  /* line 58, scss/objects/_nav.scss */
+  /* line 62, scss/objects/_nav.scss */
   .nav a {
     border: 0;
   }
 }
 
-/* line 66, scss/objects/_nav.scss */
+/* line 70, scss/objects/_nav.scss */
 .pagination {
   overflow: hidden;
 }
-/* line 69, scss/objects/_nav.scss */
+/* line 73, scss/objects/_nav.scss */
 .pagination li {
   float: left;
   border-right: 1px solid #E0E0E0;
 }
-/* line 73, scss/objects/_nav.scss */
+/* line 77, scss/objects/_nav.scss */
 .pagination li:last-child {
   border: 0;
 }
-/* line 78, scss/objects/_nav.scss */
+/* line 82, scss/objects/_nav.scss */
 .pagination a {
   padding: 1em;
 }
