LC-833 aplies styles for header/mobile

--- a/source/_patterns/01-molecules/05-navigation/00-primary-nav.mustache
+++ b/source/_patterns/01-molecules/05-navigation/00-primary-nav.mustache
@@ -4,7 +4,7 @@
 		<li><a href="#">| Traffic Info</a></li>
 	</ul>
 	<ul class="nav-list">
-		<li><a class="nav-button" href="{{ url }}"><img src="../../images/weather_icon.png"></a></li>
+		<li><a class="nav-button hide" href="{{ url }}"><img src="../../images/weather_icon.png"></a></li>
 		<li><a class="nav-button" href="{{ url }}"><img src="../../images/feedback_icon.png"></a></li>
 		<li><a class="nav-button" href="{{ url }}"><img src="../../images/localsearch_icon.png"></a></li>
 		<li><a class="nav-button" href="{{ url }}"><img src="../../images/menu_icon.png"></a></li>
