--- a/source/css/scss/objects/_header.scss
+++ b/source/css/scss/objects/_header.scss
@@ -2,15 +2,17 @@
 	padding: 0;
 	@extend .lc;
 	display: block;
-	width: 100%;
+	width: 320px;
 	z-index: 1;
-	position: absolute;
 	margin-left: auto;
 	margin-right: auto;
 	left: 0;
 	right: 0;
+	background: rgba(33,33,33,0.5);
 	@media all and (min-width: $bp-med-2) {
+		position: absolute;
 		top: 5em;
+		width: 100%;
 	}
 }
 
@@ -21,13 +23,18 @@
 
 	@media all and (min-width: $bp-med-2) {
 		max-width: 9rem;
+		margin: 0;
 	}
 }
 
 .title {
+	float: left;
+	margin: 5% 0 0 3%;
+	width: 50%;
 	color: $white;
-	font-size: 1em;
+	font-size: 0.75em;
 	line-height: 1.25em;
+	margin-bottom: 0;
 	@media all and (min-width: $bp-med-2){
 		font-size: 1.75em;
 		line-height: 1.25em;
@@ -39,7 +46,7 @@
 		font-size: 2.25em;
 		line-height: 1.25em;
 		width: 60%;
-		margin: 1.125% 0 1.125% 1.5%;
+		margin: 0.5% 0 0 1.5%;
 		float: left;
 	}
 }
