--- a/source/css/style.css
+++ b/source/css/style.css
@@ -604,7 +604,6 @@ td {
 .lc, .header, [role=main] {
   max-width: 100%;
   margin: 0 auto;
-  padding: 0.5em;
 }
 
 /*------------------------------------*\
@@ -612,7 +611,7 @@ td {
 \*------------------------------------*/
 /* Two Column Layout */
 @media all and (min-width: 960px) {
-  /* line 20, scss/objects/_layout.scss */
+  /* line 19, scss/objects/_layout.scss */
   .l-two-col .l-main {
     float: left;
     width: 70%;
@@ -620,13 +619,13 @@ td {
   }
 }
 @media all and (max-width: 960px) {
-  /* line 28, scss/objects/_layout.scss */
+  /* line 27, scss/objects/_layout.scss */
   .l-two-col .l-sidebar {
     clear: both;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 28, scss/objects/_layout.scss */
+  /* line 27, scss/objects/_layout.scss */
   .l-two-col .l-sidebar {
     float: left;
     width: 30%;
@@ -638,80 +637,80 @@ td {
     $GRIDS
 \*------------------------------------*/
 /* Grid Container */
-/* line 47, scss/objects/_layout.scss */
+/* line 46, scss/objects/_layout.scss */
 .g {
   overflow: hidden;
   margin: 0 -0.5em;
 }
 
 /* Grid Item */
-/* line 53, scss/objects/_layout.scss */
+/* line 52, scss/objects/_layout.scss */
 .gi {
   padding: 0.5em;
 }
-/* line 56, scss/objects/_layout.scss */
+/* line 55, scss/objects/_layout.scss */
 .gi img {
   display: block;
 }
 @media all and (min-width: 480px) {
-  /* line 53, scss/objects/_layout.scss */
+  /* line 52, scss/objects/_layout.scss */
   .gi {
     float: left;
   }
 }
 
 /* Grid 1up */
-/* line 67, scss/objects/_layout.scss */
+/* line 66, scss/objects/_layout.scss */
 .g-1up .gi {
   width: 100%;
 }
 
 /* Grid 2up */
 @media all and (min-width: 480px) {
-  /* line 75, scss/objects/_layout.scss */
+  /* line 74, scss/objects/_layout.scss */
   .g-2up > .gi {
     float: left;
     width: 50%;
   }
-  /* line 79, scss/objects/_layout.scss */
+  /* line 78, scss/objects/_layout.scss */
   .g-2up > .gi:nth-of-type(odd) {
     clear: left;
   }
 }
 
 /* Grid Half (Always displayed side by side) */
-/* line 88, scss/objects/_layout.scss */
+/* line 87, scss/objects/_layout.scss */
 .g-half > .gi {
   float: left;
   width: 50%;
 }
-/* line 92, scss/objects/_layout.scss */
+/* line 91, scss/objects/_layout.scss */
 .g-half > .gi:nth-of-type(odd) {
   clear: left;
 }
 
 /* Grid 3up */
 @media all and (min-width: 480px) {
-  /* line 101, scss/objects/_layout.scss */
+  /* line 100, scss/objects/_layout.scss */
   .g-3up > .gi {
     float: left;
     width: 50%;
   }
-  /* line 105, scss/objects/_layout.scss */
+  /* line 104, scss/objects/_layout.scss */
   .g-3up > .gi:nth-of-type(2n+1) {
     clear: left;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 112, scss/objects/_layout.scss */
+  /* line 111, scss/objects/_layout.scss */
   .g-3up > .gi {
     width: 33.3333333%;
   }
-  /* line 115, scss/objects/_layout.scss */
+  /* line 114, scss/objects/_layout.scss */
   .g-3up > .gi:nth-of-type(2n+1) {
     clear: none;
   }
-  /* line 119, scss/objects/_layout.scss */
+  /* line 118, scss/objects/_layout.scss */
   .g-3up > .gi:nth-of-type(3n+1) {
     clear: left;
   }
@@ -719,130 +718,130 @@ td {
 
 /* Grid 4up */
 @media all and (min-width: 480px) {
-  /* line 129, scss/objects/_layout.scss */
+  /* line 128, scss/objects/_layout.scss */
   .g-4up > .gi {
     float: left;
     width: 50%;
   }
-  /* line 133, scss/objects/_layout.scss */
+  /* line 132, scss/objects/_layout.scss */
   .g-4up > .gi:nth-of-type(2n+1) {
     clear: both;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 140, scss/objects/_layout.scss */
+  /* line 139, scss/objects/_layout.scss */
   .g-4up > .gi {
     width: 25%;
   }
-  /* line 143, scss/objects/_layout.scss */
+  /* line 142, scss/objects/_layout.scss */
   .g-4up > .gi:nth-of-type(2n+1) {
     clear: none;
   }
-  /* line 147, scss/objects/_layout.scss */
+  /* line 146, scss/objects/_layout.scss */
   .g-4up > .gi:nth-of-type(4n+1) {
     clear: left;
   }
 }
 
 /* Grid Quarter (Always displayed side by side) */
-/* line 156, scss/objects/_layout.scss */
+/* line 155, scss/objects/_layout.scss */
 .g-quarter > .gi {
   float: left;
   width: 24%;
 }
-/* line 160, scss/objects/_layout.scss */
+/* line 159, scss/objects/_layout.scss */
 .g-quarter > .gi:nth-of-type(4n+1) {
   clear: left;
 }
 
 @media all and (min-width: 29.75em) {
-  /* line 169, scss/objects/_layout.scss */
+  /* line 168, scss/objects/_layout.scss */
   .g-max4 > .gi {
     float: left;
     width: 50%;
   }
-  /* line 173, scss/objects/_layout.scss */
+  /* line 172, scss/objects/_layout.scss */
   .g-max4 > .gi:nth-of-type(2n+1) {
     clear: both;
   }
 }
 @media all and (min-width: 39.8em) {
-  /* line 180, scss/objects/_layout.scss */
+  /* line 179, scss/objects/_layout.scss */
   .g-max4 > .gi {
     width: 33.3333333%;
   }
-  /* line 183, scss/objects/_layout.scss */
+  /* line 182, scss/objects/_layout.scss */
   .g-max4 > .gi:nth-of-type(2n+1) {
     clear: none;
   }
-  /* line 187, scss/objects/_layout.scss */
+  /* line 186, scss/objects/_layout.scss */
   .g-max4 > .gi:nth-of-type(3n+1) {
     clear: left;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 194, scss/objects/_layout.scss */
+  /* line 193, scss/objects/_layout.scss */
   .g-max4 > .gi {
     width: 25%;
   }
-  /* line 197, scss/objects/_layout.scss */
+  /* line 196, scss/objects/_layout.scss */
   .g-max4 > .gi:nth-of-type(3n+1) {
     clear: none;
   }
-  /* line 201, scss/objects/_layout.scss */
+  /* line 200, scss/objects/_layout.scss */
   .g-max4 > .gi:nth-of-type(4n+1) {
     clear: left;
   }
 }
 
 /* Grid 5up */
-/* line 211, scss/objects/_layout.scss */
+/* line 210, scss/objects/_layout.scss */
 .g-max5 > .gi {
   float: left;
   width: 50%;
 }
-/* line 215, scss/objects/_layout.scss */
+/* line 214, scss/objects/_layout.scss */
 .g-max5 > .gi:nth-of-type(2n+1) {
   clear: both;
 }
 @media all and (min-width: 39.8em) {
-  /* line 221, scss/objects/_layout.scss */
+  /* line 220, scss/objects/_layout.scss */
   .g-max5 > .gi {
     width: 33.3333333%;
   }
-  /* line 224, scss/objects/_layout.scss */
+  /* line 223, scss/objects/_layout.scss */
   .g-max5 > .gi:nth-of-type(2n+1) {
     clear: none;
   }
-  /* line 228, scss/objects/_layout.scss */
+  /* line 227, scss/objects/_layout.scss */
   .g-max5 > .gi:nth-of-type(3n+1) {
     clear: left;
   }
 }
 @media all and (min-width: 480px) {
-  /* line 235, scss/objects/_layout.scss */
+  /* line 234, scss/objects/_layout.scss */
   .g-max5 > .gi {
     width: 25%;
   }
-  /* line 238, scss/objects/_layout.scss */
+  /* line 237, scss/objects/_layout.scss */
   .g-max5 > .gi:nth-of-type(3n+1) {
     clear: none;
   }
-  /* line 242, scss/objects/_layout.scss */
+  /* line 241, scss/objects/_layout.scss */
   .g-max5 > .gi:nth-of-type(4n+1) {
     clear: left;
   }
 }
 @media all and (min-width: 720px) {
-  /* line 249, scss/objects/_layout.scss */
+  /* line 248, scss/objects/_layout.scss */
   .g-max5 > .gi {
     width: 20%;
   }
-  /* line 252, scss/objects/_layout.scss */
+  /* line 251, scss/objects/_layout.scss */
   .g-max5 > .gi:nth-of-type(4n+1) {
     clear: none;
   }
-  /* line 256, scss/objects/_layout.scss */
+  /* line 255, scss/objects/_layout.scss */
   .g-max5 > .gi:nth-of-type(5n+1) {
     clear: left;
   }
@@ -850,7 +849,7 @@ td {
 
 /* Grid 2/3 */
 @media all and (min-width: 480px) {
-  /* line 264, scss/objects/_layout.scss */
+  /* line 263, scss/objects/_layout.scss */
   .gi-2-3 {
     float: left;
     width: 66.666666%;
@@ -858,7 +857,7 @@ td {
 }
 
 @media all and (min-width: 480px) {
-  /* line 271, scss/objects/_layout.scss */
+  /* line 270, scss/objects/_layout.scss */
   .gi-1-3 {
     float: left;
     width: 33.333333%;
@@ -866,11 +865,11 @@ td {
 }
 
 /* Grid 4up block */
-/* line 280, scss/objects/_layout.scss */
+/* line 279, scss/objects/_layout.scss */
 .g-opposites .gi {
   float: left;
 }
-/* line 283, scss/objects/_layout.scss */
+/* line 282, scss/objects/_layout.scss */
 .g-opposites .gi:last-child {
   float: right;
   text-align: right;
@@ -1090,7 +1089,6 @@ td {
 \*------------------------------------*/
 /* line 4, scss/objects/_main.scss */
 [role=main] {
-  padding: 0.5em 0.5em 2em;
   overflow: hidden;
 }
 
@@ -1440,13 +1438,14 @@ td {
 /* line 28, scss/objects/_blocks.scss */
 .block-hero .b-thumb img {
   display: block;
+  width: 100%;
 }
 @media all and (min-width: 960px) {
   /* line 24, scss/objects/_blocks.scss */
   .block-hero {
     position: relative;
   }
-  /* line 36, scss/objects/_blocks.scss */
+  /* line 37, scss/objects/_blocks.scss */
   .block-hero .b-text {
     position: absolute;
     bottom: 0;
@@ -1459,27 +1458,27 @@ td {
 }
 
 /* Block Thumbnail with Headline */
-/* line 49, scss/objects/_blocks.scss */
+/* line 50, scss/objects/_blocks.scss */
 .block-thumb {
   display: table;
   width: 100%;
   border-collapse: collapse;
 }
-/* line 54, scss/objects/_blocks.scss */
+/* line 55, scss/objects/_blocks.scss */
 .block-thumb .b-inner {
   display: table-row;
   vertical-align: top;
   overflow: hidden;
 }
 @media all and (min-width: 29.75em) {
-  /* line 60, scss/objects/_blocks.scss */
+  /* line 61, scss/objects/_blocks.scss */
   .block-thumb .b-thumb {
     display: table-cell;
     vertical-align: top;
     width: 30%;
     max-width: 10em;
   }
-  /* line 67, scss/objects/_blocks.scss */
+  /* line 68, scss/objects/_blocks.scss */
   .block-thumb .b-thumb img {
     display: block;
     width: 100%;
@@ -1487,7 +1486,7 @@ td {
   }
 }
 @media all and (min-width: 29.75em) {
-  /* line 75, scss/objects/_blocks.scss */
+  /* line 76, scss/objects/_blocks.scss */
   .block-thumb .b-text {
     display: table-cell;
     width: 70%;
@@ -1496,38 +1495,38 @@ td {
 }
 
 /* Block Headline Summary */
-/* line 87, scss/objects/_blocks.scss */
+/* line 88, scss/objects/_blocks.scss */
 .block-headline-summary a {
   display: block;
   padding: 0.5em;
 }
 
 /* Block Inset */
-/* line 94, scss/objects/_blocks.scss */
+/* line 95, scss/objects/_blocks.scss */
 .block-inset {
   position: relative;
 }
-/* line 97, scss/objects/_blocks.scss */
+/* line 98, scss/objects/_blocks.scss */
 .block-inset .b-thumb {
   position: relative;
   z-index: 0;
 }
-/* line 101, scss/objects/_blocks.scss */
+/* line 102, scss/objects/_blocks.scss */
 .block-inset .b-thumb img {
   display: block;
 }
 
 /* Hero Block */
-/* line 108, scss/objects/_blocks.scss */
+/* line 109, scss/objects/_blocks.scss */
 .block-inset {
   margin-bottom: 0.5em;
   position: relative;
 }
-/* line 112, scss/objects/_blocks.scss */
+/* line 113, scss/objects/_blocks.scss */
 .block-inset .headline {
   font-size: 1.1em;
 }
-/* line 116, scss/objects/_blocks.scss */
+/* line 117, scss/objects/_blocks.scss */
 .block-inset .b-text {
   position: absolute;
   bottom: 0;
@@ -1539,12 +1538,12 @@ td {
 }
 
 /* Block Thumb with Summary */
-/* line 129, scss/objects/_blocks.scss */
+/* line 130, scss/objects/_blocks.scss */
 .block-thumb-summary .b-thumb {
   float: left;
   width: 50%;
 }
-/* line 134, scss/objects/_blocks.scss */
+/* line 135, scss/objects/_blocks.scss */
 .block-thumb-summary .b-text {
   margin-left: 50%;
   padding: 0.5em;
