--- a/source/_patterns/00-atoms/04-images/02-landscape-16x9.mustache
+++ b/source/_patterns/00-atoms/04-images/02-landscape-16x9.mustache
@@ -1,1 +1,1 @@
-<img src="{{ img.landscape-16x9.src }}" alt="{{ img.landscape-16x9.alt }}" />
+<img src="../../images/hero.jpg" alt="{{ img.landscape-16x9.alt }}" />
