LC-833 reverts previous commit, set 100width for only header and hero iamge

--- a/source/css/scss/objects/_main.scss
+++ b/source/css/scss/objects/_main.scss
@@ -2,6 +2,7 @@
     $MAIN CONTENT AREA
 \*------------------------------------*/
 [role=main] {
+	padding: 1em;
 	overflow: hidden;
 	@extend .lc;
 	@extend .cf;
