LC-833 applies wrap to header creating 100%width appearance, sets actual width mac 1020px

--- a/source/_patterns/02-organisms/00-global/00-header.mustache
+++ b/source/_patterns/02-organisms/00-global/00-header.mustache
@@ -1,4 +1,5 @@
 <!--Begin .header -->
+<div class="header-wrap">
 <header class="header cf" role="banner">
 	{{> atoms-logo }}
 	<p class="title">Los Angeles Innovation and Performance Commission</p>
@@ -7,4 +8,5 @@
 	{{> molecules-primary-nav }}
 	<!--{{> molecules-search }}-->
 </header>
+</div>
 <!-- End .header -->
