--- a/source/css/style.css
+++ b/source/css/style.css
@@ -879,41 +879,47 @@ td {
     $PAGE STRUCTURE
 \*------------------------------------*/
 /* line 1, scss/objects/_header.scss */
-.header {
-  padding: 0;
+.header-wrap {
   display: block;
+  background: rgba(33, 33, 33, 0.5);
   width: 320px;
   z-index: 1;
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
-  background: rgba(33, 33, 33, 0.5);
 }
 @media all and (min-width: 720px) {
   /* line 1, scss/objects/_header.scss */
-  .header {
+  .header-wrap {
     position: absolute;
     top: 5em;
     width: 100%;
   }
 }
 
-/* line 19, scss/objects/_header.scss */
+/* line 17, scss/objects/_header.scss */
+.header {
+  padding: 0;
+  display: block;
+  max-width: 1020px;
+}
+
+/* line 35, scss/objects/_header.scss */
 .logo {
   float: left;
   max-width: 8rem;
   margin: 0.4rem;
 }
 @media all and (min-width: 720px) {
-  /* line 19, scss/objects/_header.scss */
+  /* line 35, scss/objects/_header.scss */
   .logo {
     max-width: 9rem;
     margin: 0;
   }
 }
 
-/* line 30, scss/objects/_header.scss */
+/* line 46, scss/objects/_header.scss */
 .title {
   float: left;
   margin: 5% 0 0 3%;
@@ -924,7 +930,7 @@ td {
   margin-bottom: 0;
 }
 @media all and (min-width: 720px) {
-  /* line 30, scss/objects/_header.scss */
+  /* line 46, scss/objects/_header.scss */
   .title {
     font-size: 1.75em;
     line-height: 1.25em;
@@ -934,7 +940,7 @@ td {
   }
 }
 @media all and (min-width: 960px) {
-  /* line 30, scss/objects/_header.scss */
+  /* line 46, scss/objects/_header.scss */
   .title {
     font-size: 2.25em;
     line-height: 1.25em;
@@ -944,7 +950,7 @@ td {
   }
 }
 
-/* line 54, scss/objects/_header.scss */
+/* line 70, scss/objects/_header.scss */
 .nav-toggle {
   float: right;
   display: block;
@@ -954,26 +960,26 @@ td {
   border-left: 1px solid #dbdbdb;
 }
 @media all and (min-width: 480px) {
-  /* line 54, scss/objects/_header.scss */
+  /* line 70, scss/objects/_header.scss */
   .nav-toggle {
     display: none;
   }
 }
 @media all and (max-width: 17em) {
-  /* line 54, scss/objects/_header.scss */
+  /* line 70, scss/objects/_header.scss */
   .nav-toggle {
     padding-left: 0.2rem;
     padding-right: 0.2rem;
   }
 }
 
-/* line 72, scss/objects/_header.scss */
+/* line 88, scss/objects/_header.scss */
 .search-form {
   overflow: hidden;
   max-height: 0;
 }
 @media all and (min-width: 480px) {
-  /* line 72, scss/objects/_header.scss */
+  /* line 88, scss/objects/_header.scss */
   .search-form {
     float: right;
     max-height: none;
