--- a/source/css/scss/objects/_header.scss
+++ b/source/css/scss/objects/_header.scss
@@ -1,6 +1,6 @@
 .header-wrap{
 	display: block;
-	background: rgba(33,33,33,0.5);
+	background: $dim;
 	width: 320px;
 	z-index: 1;
 	margin-left: auto;
@@ -19,17 +19,6 @@
 	@extend .lc;
 	display: block;
 	max-width: 1020px;
-	// width: 320px;
-	// z-index: 1;
-	// margin-left: auto;
-	// margin-right: auto;
-	// left: 0;
-	// right: 0;
-	// @media all and (min-width: $bp-med-2) {
-	// 	position: absolute;
-	// 	top: 5em;
-	// 	width: 100%;
-	// }
 }
 
 .logo {
