--- a/source/css/scss/base/_headings.scss
+++ b/source/css/scss/base/_headings.scss
@@ -3,6 +3,7 @@
 h1, .alpha   { 
 	font-size: 2em;
 	line-height: 1.25em;
+	color: #CC4E10;
 	@media all and (min-width: $bp-med-2){
 		font-size: 2.5em;
 		line-height: 1.125em;
