--- a/source/_patterns/03-templates/02-article.mustache
+++ b/source/_patterns/03-templates/02-article.mustache
@@ -1,5 +1,8 @@
 <div class="page" id="page">
 	{{> organisms-header }}
+	{{# hero }}
+		{{> molecules-block-hero }}
+	{{/ hero}}
 	<div role="main">
 		<div class="l-two-col">
 			<div class="l-main">
