--- a/source/_patterns/04-pages/01-blog.mustache
+++ b/source/_patterns/04-pages/01-blog.mustache
@@ -1,5 +1,8 @@
 <div class="page" id="page">
 	{{> organisms-header }}
+	{{# hero }}
+		{{> molecules-block-hero }}
+	{{/ hero}}
 	<div role="main">
 		<h1 class="section-title">Our Outdoor Blog</h1>
 		<div class="l-two-col">
