--- a/source/css/scss/objects/_header.scss
+++ b/source/css/scss/objects/_header.scss
@@ -1,7 +1,7 @@
 .header-wrap{
 	display: block;
-	background: $dim;
-	width: 320px;
+	background: $classicblue;
+	width: 100%;
 	z-index: 1;
 	margin-left: auto;
 	margin-right: auto;
@@ -15,16 +15,18 @@
 }
 
 .header {
-	padding: 0;
 	@extend .lc;
 	display: block;
-	max-width: 1020px;
+	max-width: 320px;
+	@media all and (min-width: $bp-med-2){
+		max-width: 1020px;
+	}
 }
 
 .logo {
 	float: left;
-	max-width: 8rem;
-	margin: 0.4rem;
+	max-width: 5.5em;
+  	margin: 0.8em 0 0.8em 1.8em;
 
 	@media all and (min-width: $bp-med-2) {
 		max-width: 9rem;
@@ -34,24 +36,24 @@
 
 .title {
 	float: left;
-	margin: 5% 0 0 3%;
-	width: 50%;
+	margin: 1.2em 0 0 1em;
+	width: 14em;
 	color: $white;
 	font-size: 0.75em;
 	line-height: 1.25em;
 	margin-bottom: 0;
 	@media all and (min-width: $bp-med-2){
-		font-size: 1.75em;
+		font-size: 1.55em;
 		line-height: 1.25em;
-		width: 45%;
-		margin: 2.75% 0 0 1.5%;
+		width: 48%;
+		margin: 0.8em 0 0 0.5em;
 		float: left;
 	}
 	@media all and (min-width: $bp-large){
-		font-size: 2.25em;
+		font-size: 2em;
 		line-height: 1.25em;
 		width: 60%;
-		margin: 0.5% 0 0 1.5%;
+		margin: 0.4em 0 0 0.5em;
 		float: left;
 	}
 }
