--- a/source/css/scss/objects/_nav.scss
+++ b/source/css/scss/objects/_nav.scss
@@ -31,11 +31,14 @@
 		display: block;
 		text-align: center;
 		padding: 0.5em 0;
-		margin: 0.5em;
+		margin: 0.8em 0 0 0.8em;
 		width: 2.7em;
 		height: 2.7em;
 		background: $orange;
 		@include vendor-prefix(border-radius, 8px);
+		@media all and (min-width: $bp-med-2) {
+			margin: 0.5em;margin: 0.5em;
+		}
 		&.hide {
 			display: none;
 			@media all and (min-width: $bp-med-2) {
