--- a/source/css/style.css
+++ b/source/css/style.css
@@ -881,8 +881,8 @@ td {
 /* line 1, scss/objects/_header.scss */
 .header-wrap {
   display: block;
-  background: rgba(0, 0, 0, 0.5);
-  width: 320px;
+  background: #014982;
+  width: 100%;
   z-index: 1;
   margin-left: auto;
   margin-right: auto;
@@ -900,57 +900,62 @@ td {
 
 /* line 17, scss/objects/_header.scss */
 .header {
-  padding: 0;
   display: block;
-  max-width: 1020px;
-}
-
-/* line 24, scss/objects/_header.scss */
-.logo {
-  float: left;
-  max-width: 8rem;
-  margin: 0.4rem;
+  max-width: 320px;
 }
 @media all and (min-width: 720px) {
-  /* line 24, scss/objects/_header.scss */
+  /* line 17, scss/objects/_header.scss */
+  .header {
+    max-width: 1020px;
+  }
+}
+
+/* line 26, scss/objects/_header.scss */
+.logo {
+  float: left;
+  max-width: 5.5em;
+  margin: 0.8em 0 0.8em 1.8em;
+}
+@media all and (min-width: 720px) {
+  /* line 26, scss/objects/_header.scss */
   .logo {
     max-width: 9rem;
     margin: 0;
   }
 }
 
-/* line 35, scss/objects/_header.scss */
+/* line 37, scss/objects/_header.scss */
 .title {
   float: left;
-  margin: 5% 0 0 3%;
-  width: 50%;
+  margin: 1.2em 0 0 1em;
+  width: 14em;
   color: #fff;
   font-size: 0.75em;
   line-height: 1.25em;
   margin-bottom: 0;
 }
 @media all and (min-width: 720px) {
-  /* line 35, scss/objects/_header.scss */
+  /* line 37, scss/objects/_header.scss */
   .title {
-    font-size: 1.75em;
+    font-size: 1.55em;
     line-height: 1.25em;
-    width: 45%;
-    margin: 2.75% 0 0 1.5%;
+    width: 48%;
+    margin: 0.8em 0 0 0.5em;
     float: left;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 35, scss/objects/_header.scss */
+  /* line 37, scss/objects/_header.scss */
   .title {
-    font-size: 2.25em;
+    font-size: 2em;
     line-height: 1.25em;
     width: 60%;
-    margin: 0.5% 0 0 1.5%;
+    margin: 0.4em 0 0 0.5em;
     float: left;
   }
 }
 
-/* line 59, scss/objects/_header.scss */
+/* line 61, scss/objects/_header.scss */
 .nav-toggle {
   float: right;
   display: block;
@@ -960,26 +965,26 @@ td {
   border-left: 1px solid #dbdbdb;
 }
 @media all and (min-width: 480px) {
-  /* line 59, scss/objects/_header.scss */
+  /* line 61, scss/objects/_header.scss */
   .nav-toggle {
     display: none;
   }
 }
 @media all and (max-width: 17em) {
-  /* line 59, scss/objects/_header.scss */
+  /* line 61, scss/objects/_header.scss */
   .nav-toggle {
     padding-left: 0.2rem;
     padding-right: 0.2rem;
   }
 }
 
-/* line 77, scss/objects/_header.scss */
+/* line 79, scss/objects/_header.scss */
 .search-form {
   overflow: hidden;
   max-height: 0;
 }
 @media all and (min-width: 480px) {
-  /* line 77, scss/objects/_header.scss */
+  /* line 79, scss/objects/_header.scss */
   .search-form {
     float: right;
     max-height: none;
@@ -1029,7 +1034,7 @@ td {
   display: block;
   text-align: center;
   padding: 0.5em 0;
-  margin: 0.5em;
+  margin: 0.8em 0 0 0.8em;
   width: 2.7em;
   height: 2.7em;
   background: #CC4E10;
@@ -1039,29 +1044,36 @@ td {
   -o-border-radius: 8px;
   border-radius: 8px;
 }
-/* line 39, scss/objects/_nav.scss */
+@media all and (min-width: 720px) {
+  /* line 30, scss/objects/_nav.scss */
+  .nav .nav-button {
+    margin: 0.5em;
+    margin: 0.5em;
+  }
+}
+/* line 42, scss/objects/_nav.scss */
 .nav .nav-button.hide {
   display: none;
 }
 @media all and (min-width: 720px) {
-  /* line 39, scss/objects/_nav.scss */
+  /* line 42, scss/objects/_nav.scss */
   .nav .nav-button.hide {
     display: inherit;
   }
 }
-/* line 48, scss/objects/_nav.scss */
+/* line 51, scss/objects/_nav.scss */
 .nav img {
   height: 1.6em;
 }
-/* line 54, scss/objects/_nav.scss */
+/* line 57, scss/objects/_nav.scss */
 .nav a {
   border: none;
 }
-/* line 59, scss/objects/_nav.scss */
+/* line 62, scss/objects/_nav.scss */
 .nav li {
   float: left;
 }
-/* line 63, scss/objects/_nav.scss */
+/* line 66, scss/objects/_nav.scss */
 .nav.active {
   max-height: 40em;
 }
@@ -1072,20 +1084,20 @@ td {
   }
 }
 
-/* line 73, scss/objects/_nav.scss */
+/* line 76, scss/objects/_nav.scss */
 .pagination {
   overflow: hidden;
 }
-/* line 76, scss/objects/_nav.scss */
+/* line 79, scss/objects/_nav.scss */
 .pagination li {
   float: left;
   border-right: 1px solid #E0E0E0;
 }
-/* line 80, scss/objects/_nav.scss */
+/* line 83, scss/objects/_nav.scss */
 .pagination li:last-child {
   border: 0;
 }
-/* line 85, scss/objects/_nav.scss */
+/* line 88, scss/objects/_nav.scss */
 .pagination a {
   padding: 1em;
 }
@@ -1441,64 +1453,60 @@ td {
 /* line 24, scss/objects/_blocks.scss */
 .block-hero {
   margin-bottom: 0.5em;
+  position: relative;
 }
 /* line 28, scss/objects/_blocks.scss */
 .block-hero .b-thumb img {
   display: block;
   width: 100%;
 }
-@media all and (min-width: 960px) {
-  /* line 24, scss/objects/_blocks.scss */
-  .block-hero {
-    position: relative;
-  }
-  /* line 37, scss/objects/_blocks.scss */
-  .block-hero .b-text {
-    position: absolute;
-    bottom: 11em;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    width: 36%;
-    border: 2px solid #fff;
-    padding: 1em;
-    -webkit-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -o-border-radius: 10px;
-    border-radius: 10px;
-  }
-  /* line 51, scss/objects/_blocks.scss */
-  .block-hero .b-title {
-    text-transform: uppercase;
-    color: #fff;
-    font-size: 2.5em;
-  }
+/* line 36, scss/objects/_blocks.scss */
+.block-hero .b-text {
+  position: absolute;
+  bottom: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  width: 50%;
+  border: 2px solid #fff;
+  padding: 1em;
+  text-align: center;
+  -webkit-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -o-border-radius: 10px;
+  border-radius: 10px;
+}
+/* line 51, scss/objects/_blocks.scss */
+.block-hero .b-title {
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 2.5em;
 }
 
 /* Block Thumbnail with Headline */
-/* line 60, scss/objects/_blocks.scss */
+/* line 59, scss/objects/_blocks.scss */
 .block-thumb {
   display: table;
   width: 100%;
   border-collapse: collapse;
 }
-/* line 65, scss/objects/_blocks.scss */
+/* line 64, scss/objects/_blocks.scss */
 .block-thumb .b-inner {
   display: table-row;
   vertical-align: top;
   overflow: hidden;
 }
 @media all and (min-width: 29.75em) {
-  /* line 71, scss/objects/_blocks.scss */
+  /* line 70, scss/objects/_blocks.scss */
   .block-thumb .b-thumb {
     display: table-cell;
     vertical-align: top;
     width: 30%;
     max-width: 10em;
   }
-  /* line 78, scss/objects/_blocks.scss */
+  /* line 77, scss/objects/_blocks.scss */
   .block-thumb .b-thumb img {
     display: block;
     width: 100%;
@@ -1506,7 +1514,7 @@ td {
   }
 }
 @media all and (min-width: 29.75em) {
-  /* line 86, scss/objects/_blocks.scss */
+  /* line 85, scss/objects/_blocks.scss */
   .block-thumb .b-text {
     display: table-cell;
     width: 70%;
@@ -1515,38 +1523,38 @@ td {
 }
 
 /* Block Headline Summary */
-/* line 98, scss/objects/_blocks.scss */
+/* line 97, scss/objects/_blocks.scss */
 .block-headline-summary a {
   display: block;
   padding: 0.5em;
 }
 
 /* Block Inset */
-/* line 105, scss/objects/_blocks.scss */
+/* line 104, scss/objects/_blocks.scss */
 .block-inset {
   position: relative;
 }
-/* line 108, scss/objects/_blocks.scss */
+/* line 107, scss/objects/_blocks.scss */
 .block-inset .b-thumb {
   position: relative;
   z-index: 0;
 }
-/* line 112, scss/objects/_blocks.scss */
+/* line 111, scss/objects/_blocks.scss */
 .block-inset .b-thumb img {
   display: block;
 }
 
 /* Hero Block */
-/* line 119, scss/objects/_blocks.scss */
+/* line 118, scss/objects/_blocks.scss */
 .block-inset {
   margin-bottom: 0.5em;
   position: relative;
 }
-/* line 123, scss/objects/_blocks.scss */
+/* line 122, scss/objects/_blocks.scss */
 .block-inset .headline {
   font-size: 1.1em;
 }
-/* line 127, scss/objects/_blocks.scss */
+/* line 126, scss/objects/_blocks.scss */
 .block-inset .b-text {
   position: absolute;
   bottom: 0;
@@ -1558,12 +1566,12 @@ td {
 }
 
 /* Block Thumb with Summary */
-/* line 140, scss/objects/_blocks.scss */
+/* line 139, scss/objects/_blocks.scss */
 .block-thumb-summary .b-thumb {
   float: left;
   width: 50%;
 }
-/* line 145, scss/objects/_blocks.scss */
+/* line 144, scss/objects/_blocks.scss */
 .block-thumb-summary .b-text {
   margin-left: 50%;
   padding: 0.5em;
