--- a/source/css/scss/objects/_blocks.scss
+++ b/source/css/scss/objects/_blocks.scss
@@ -40,7 +40,7 @@
 		margin-right: auto;
 		left: 0;
 		right: 0;
-		width: 50%;
+		width: 60%;
 		border: 2px solid $white;
 		padding: 1em;
 		text-align: center;
@@ -51,7 +51,16 @@
 	.b-title {
 		text-transform: uppercase;
 		color: $white;
-		font-size: 2.5em;
+		font-size: 0.8em;
+		line-height: 1.25em;
+		@media all and (min-width: $bp-med-2){
+			font-size: 2.25em;
+			line-height: 1.125em;
+		}
+		@media all and (min-width: $bp-large){
+			font-size: 3em;
+			line-height: 1.05em;
+		}
 	}
 }
 
