--- a/source/css/style.css
+++ b/source/css/style.css
@@ -901,7 +901,7 @@ td {
 /* line 17, scss/objects/_header.scss */
 .header {
   display: block;
-  max-width: 320px;
+  max-width: 310px;
 }
 @media all and (min-width: 720px) {
   /* line 17, scss/objects/_header.scss */
@@ -914,7 +914,7 @@ td {
 .logo {
   float: left;
   max-width: 5.5em;
-  margin: 0.8em 0 0.8em 1.8em;
+  margin: 0.8em 0 0.8em 1.4em;
 }
 @media all and (min-width: 720px) {
   /* line 26, scss/objects/_header.scss */
@@ -1468,7 +1468,7 @@ td {
   margin-right: auto;
   left: 0;
   right: 0;
-  width: 50%;
+  width: 60%;
   border: 2px solid #fff;
   padding: 1em;
   text-align: center;
@@ -1482,31 +1482,46 @@ td {
 .block-hero .b-title {
   text-transform: uppercase;
   color: #fff;
-  font-size: 2.5em;
+  font-size: 0.8em;
+  line-height: 1.25em;
+}
+@media all and (min-width: 720px) {
+  /* line 51, scss/objects/_blocks.scss */
+  .block-hero .b-title {
+    font-size: 2.25em;
+    line-height: 1.125em;
+  }
+}
+@media all and (min-width: 960px) {
+  /* line 51, scss/objects/_blocks.scss */
+  .block-hero .b-title {
+    font-size: 3em;
+    line-height: 1.05em;
+  }
 }
 
 /* Block Thumbnail with Headline */
-/* line 59, scss/objects/_blocks.scss */
+/* line 68, scss/objects/_blocks.scss */
 .block-thumb {
   display: table;
   width: 100%;
   border-collapse: collapse;
 }
-/* line 64, scss/objects/_blocks.scss */
+/* line 73, scss/objects/_blocks.scss */
 .block-thumb .b-inner {
   display: table-row;
   vertical-align: top;
   overflow: hidden;
 }
 @media all and (min-width: 29.75em) {
-  /* line 70, scss/objects/_blocks.scss */
+  /* line 79, scss/objects/_blocks.scss */
   .block-thumb .b-thumb {
     display: table-cell;
     vertical-align: top;
     width: 30%;
     max-width: 10em;
   }
-  /* line 77, scss/objects/_blocks.scss */
+  /* line 86, scss/objects/_blocks.scss */
   .block-thumb .b-thumb img {
     display: block;
     width: 100%;
@@ -1514,7 +1529,7 @@ td {
   }
 }
 @media all and (min-width: 29.75em) {
-  /* line 85, scss/objects/_blocks.scss */
+  /* line 94, scss/objects/_blocks.scss */
   .block-thumb .b-text {
     display: table-cell;
     width: 70%;
@@ -1523,38 +1538,38 @@ td {
 }
 
 /* Block Headline Summary */
-/* line 97, scss/objects/_blocks.scss */
+/* line 106, scss/objects/_blocks.scss */
 .block-headline-summary a {
   display: block;
   padding: 0.5em;
 }
 
 /* Block Inset */
-/* line 104, scss/objects/_blocks.scss */
+/* line 113, scss/objects/_blocks.scss */
 .block-inset {
   position: relative;
 }
-/* line 107, scss/objects/_blocks.scss */
+/* line 116, scss/objects/_blocks.scss */
 .block-inset .b-thumb {
   position: relative;
   z-index: 0;
 }
-/* line 111, scss/objects/_blocks.scss */
+/* line 120, scss/objects/_blocks.scss */
 .block-inset .b-thumb img {
   display: block;
 }
 
 /* Hero Block */
-/* line 118, scss/objects/_blocks.scss */
+/* line 127, scss/objects/_blocks.scss */
 .block-inset {
   margin-bottom: 0.5em;
   position: relative;
 }
-/* line 122, scss/objects/_blocks.scss */
+/* line 131, scss/objects/_blocks.scss */
 .block-inset .headline {
   font-size: 1.1em;
 }
-/* line 126, scss/objects/_blocks.scss */
+/* line 135, scss/objects/_blocks.scss */
 .block-inset .b-text {
   position: absolute;
   bottom: 0;
@@ -1566,12 +1581,12 @@ td {
 }
 
 /* Block Thumb with Summary */
-/* line 139, scss/objects/_blocks.scss */
+/* line 148, scss/objects/_blocks.scss */
 .block-thumb-summary .b-thumb {
   float: left;
   width: 50%;
 }
-/* line 144, scss/objects/_blocks.scss */
+/* line 153, scss/objects/_blocks.scss */
 .block-thumb-summary .b-text {
   margin-left: 50%;
   padding: 0.5em;
