LC-833 sets secondart hero for articles and blog templates

--- a/source/_patterns/03-templates/02-article.mustache
+++ b/source/_patterns/03-templates/02-article.mustache
@@ -1,7 +1,7 @@
 <div class="page" id="page">
 	{{> organisms-header }}
-	{{# hero }}
-		{{> molecules-block-hero }}
+	{{# hero}}
+		{{> molecules-block-hero-secondary }}
 	{{/ hero}}
 	<div role="main">
 		<div class="l-two-col">
