LC-833 creates atom for ad images

--- a/source/_patterns/00-atoms/04-images/03-landscape-8x3.mustache
+++ b/source/_patterns/00-atoms/04-images/03-landscape-8x3.mustache
@@ -1,1 +1,1 @@
-<img src="../../images/hero_2nd.jpg" alt="{{ img.landscape-16x9.alt }}" />
+<img src="{{ img.landscape-8x3.src }}" alt="{{ img.landscape-8x3.alt }}" />
