LC-833 fixes images on pages

--- a/source/_patterns/02-organisms/00-global/01-footer.mustache
+++ b/source/_patterns/02-organisms/00-global/01-footer.mustache
@@ -1,5 +1,6 @@
 <!-- Begin Footer -->
 <footer class="footer" role="contentinfo">
+	{{> molocules-footer-nav }}
 	<div class="lc">
 		<p class="copyright">&copy; 2013 Company Name. All rights reserved.</p>
 	</div>
