--- a/source/_patterns/01-molecules/02-blocks/02-block-hero.mustache
+++ b/source/_patterns/01-molecules/02-blocks/02-block-hero.mustache
@@ -4,7 +4,7 @@
 			{{> atoms-landscape-16x9 }} 
 		</div>
 		<div class="b-text">
-			<h2 class="b-title">Submit Your Ideas</h2>
+			<h2 class="b-title">{{ headline.medium }}</h2>
 		</div>
 	</a>
 </div>
