LC-833 begins formatting the footer elements

--- a/source/_patterns/01-molecules/05-navigation/01-footer-nav.mustache
+++ b/source/_patterns/01-molecules/05-navigation/01-footer-nav.mustache
@@ -1,6 +1,10 @@
 <ul class="nav-footer">
-	<li><a href="{{ url }}">Home</a></li>
-	<li><a href="{{ url }}">About</a></li>
-	<li><a href="{{ url }}">Blog</a></li>
-	<li><a href="{{ url }}">Contact</a></li>
+	<li><a href="{{ url }}">Who Are We</a></li>
+	<li><a href="{{ url }}">Commission Memebers</a></li>
+	<li><a href="{{ url }}">Leader & Oversight</a></li>
+	<li><a href="{{ url }}">Innovate Fund</a></li>
+	<li><a href="{{ url }}">Agendas & Minutes</a></li>
+	<li><a href="{{ url }}">Calendar</a></li>
+	<li><a href="{{ url }}">What's New</a></li>
+	<li><a href="{{ url }}">Contact Us</a></li>
 </ul>
