--- a/source/_patterns/02-organisms/00-global/01-footer.mustache
+++ b/source/_patterns/02-organisms/00-global/01-footer.mustache
@@ -1,8 +1,19 @@
 <!-- Begin Footer -->
 <footer class="footer" role="contentinfo">
-	{{> molocules-footer-nav }}
 	<div class="lc">
-		<p class="copyright">&copy; 2013 Company Name. All rights reserved.</p>
+		<div>
+			<h3>Style Guide</h3>
+			<p>City of Los Angeles</p>
+			<p class="copyright">&copy; 2015 Company Name. All rights reserved. | Disclaimer | Privacy Policy</p>
+		</div>
+		<div>
+			<address>
+			200 N. Main Street,
+			RM 1500 CHE
+			Los Angeles, CA 90012
+			</address>
+		</div>
+		{{> molecules-footer-nav }}
 	</div>
 </footer>
 <!-- End Footer -->
