--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1125,7 +1125,7 @@ td {
 }
 /* line 11, scss/objects/_footer.scss */
 .footer a {
-  color: #E0E0E0;
+  color: #fff;
 }
 
 /* line 17, scss/objects/_footer.scss */
@@ -1140,20 +1140,12 @@ td {
   /* line 20, scss/objects/_footer.scss */
   .nav-footer li {
     border: 0;
-    float: left;
   }
 }
 /* line 29, scss/objects/_footer.scss */
 .nav-footer a {
   display: block;
-  padding: 1em;
-}
-
-@media all and (min-width: 480px) {
-  /* line 35, scss/objects/_footer.scss */
-  .copyright {
-    float: right;
-  }
+  padding: 0;
 }
 
 /*------------------------------------*\
