Add FlexGRID to footer

--- a/source/_patterns/02-organisms/00-global/01-footer.mustache
+++ b/source/_patterns/02-organisms/00-global/01-footer.mustache
@@ -3,5 +3,28 @@
 	<div class="lc">
 		<p class="copyright">&copy; 2013 Company Name. All rights reserved.</p>
 	</div>
+	<div class="wrapper flexGRID">
+        <div class="row">
+            <div class="col_4">
+                STYLE GUIDE <br>
+City of Los Angeles
+            </div>
+            <div class="col_4">
+            200 N. Main Street,<br>
+			RM 1500 CHE<br>
+			Los Angeles, CA 90012<br>  
+            </div>
+            <div class="col_4 last">
+            Who Are We<br>
+			Commission Members<br>
+			Leader & Oversight<br>
+			Innovate Fund<br>
+			Agendas & Minutes<br>
+			Calendar<br>
+			What’s New<br>
+			Contact Us<br>
+            </div>
+        </div>
+    </div>
 </footer>
 <!-- End Footer -->
