--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1148,7 +1148,7 @@ td {
   padding: 0;
 }
 
-/* line 41, scss/objects/_footer.scss */
+/* line 40, scss/objects/_footer.scss */
 .wrapper {
   width: 100%;
   border-collapse: collapse;
@@ -1159,12 +1159,12 @@ td {
   margin: 4% 0 0;
 }
 
-/* line 50, scss/objects/_footer.scss */
+/* line 49, scss/objects/_footer.scss */
 body .wrapper:first-child {
-  margin: 0;
+  margin: 0 auto 0 auto;
 }
 
-/* line 53, scss/objects/_footer.scss */
+/* line 52, scss/objects/_footer.scss */
 .row {
   clear: both;
   max-width: 92%;
@@ -1172,14 +1172,14 @@ body .wrapper:first-child {
   margin: 0 auto;
 }
 
-/* line 59, scss/objects/_footer.scss */
+/* line 58, scss/objects/_footer.scss */
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* line 64, scss/objects/_footer.scss */
+/* line 63, scss/objects/_footer.scss */
 .col_1, .col_2, .col_3, .col_4, .col_5, .col_6, .col_7, .col_8, .col_9, .col_10, .col_11, .col_12 {
   font-size: 14px;
   float: left;
@@ -1192,7 +1192,7 @@ body .wrapper:first-child {
   margin: 4% 0 0;
 }
 
-/* line 75, scss/objects/_footer.scss */
+/* line 74, scss/objects/_footer.scss */
 .wrapper .row .col_1,
 .wrapper .row .col_2,
 .wrapper .row .col_3,
@@ -1208,7 +1208,7 @@ body .wrapper:first-child {
   padding: 20px;
 }
 
-/* line 89, scss/objects/_footer.scss */
+/* line 88, scss/objects/_footer.scss */
 .no_padding,
 .row.no_padding .col_1,
 .row.no_padding .col_2,
@@ -1226,14 +1226,14 @@ body .wrapper:first-child {
 }
 
 @media all and (min-width: 768px) {
-  /* line 106, scss/objects/_footer.scss */
+  /* line 105, scss/objects/_footer.scss */
   .wrapper {
     width: 100%;
     padding: 1% 0;
     margin: 2% 0 0;
   }
 
-  /* line 111, scss/objects/_footer.scss */
+  /* line 110, scss/objects/_footer.scss */
   .row {
     display: -webkit-box;
     display: -moz-box;
@@ -1247,19 +1247,19 @@ body .wrapper:first-child {
     padding: 2% 0 0;
   }
 
-  /* line 123, scss/objects/_footer.scss */
+  /* line 122, scss/objects/_footer.scss */
   .wrapper .row {
     padding: 1% 0;
   }
 
-  /* line 126, scss/objects/_footer.scss */
+  /* line 125, scss/objects/_footer.scss */
   .row:after {
     content: "";
     display: table;
     clear: both;
   }
 
-  /* line 131, scss/objects/_footer.scss */
+  /* line 130, scss/objects/_footer.scss */
   .col_1, .col_2, .col_3, .col_4, .col_5, .col_6, .col_7, .col_8, .col_9, .col_10, .col_11, .col_12 {
     margin: 0 2% 0 0;
     float: left;
@@ -1267,78 +1267,78 @@ body .wrapper:first-child {
     position: relative;
   }
 
-  /* line 138, scss/objects/_footer.scss */
+  /* line 137, scss/objects/_footer.scss */
   .col_1 {
     width: 6.5%;
   }
 
-  /* line 139, scss/objects/_footer.scss */
+  /* line 138, scss/objects/_footer.scss */
   .col_2 {
     width: 15%;
   }
 
-  /* line 140, scss/objects/_footer.scss */
+  /* line 139, scss/objects/_footer.scss */
   .col_3 {
     width: 23.5%;
   }
 
-  /* line 141, scss/objects/_footer.scss */
+  /* line 140, scss/objects/_footer.scss */
   .col_4 {
     width: 32%;
   }
 
-  /* line 142, scss/objects/_footer.scss */
+  /* line 141, scss/objects/_footer.scss */
   .col_5 {
     width: 40.5%;
   }
 
-  /* line 143, scss/objects/_footer.scss */
+  /* line 142, scss/objects/_footer.scss */
   .col_6 {
     width: 49%;
   }
 
-  /* line 144, scss/objects/_footer.scss */
+  /* line 143, scss/objects/_footer.scss */
   .col_7 {
     width: 57.5%;
   }
 
-  /* line 145, scss/objects/_footer.scss */
+  /* line 144, scss/objects/_footer.scss */
   .col_8 {
     width: 66%;
   }
 
-  /* line 146, scss/objects/_footer.scss */
+  /* line 145, scss/objects/_footer.scss */
   .col_9 {
     width: 74.5%;
   }
 
-  /* line 147, scss/objects/_footer.scss */
+  /* line 146, scss/objects/_footer.scss */
   .col_10 {
     width: 83%;
   }
 
-  /* line 148, scss/objects/_footer.scss */
+  /* line 147, scss/objects/_footer.scss */
   .col_11 {
     width: 91.5%;
   }
 
-  /* line 149, scss/objects/_footer.scss */
+  /* line 148, scss/objects/_footer.scss */
   .col_12 {
     width: 100%;
     margin: 0;
   }
 
-  /* line 151, scss/objects/_footer.scss */
+  /* line 150, scss/objects/_footer.scss */
   .last {
     margin: 0;
   }
 }
-/* line 159, scss/objects/_footer.scss */
+/* line 158, scss/objects/_footer.scss */
 .flexGRID {
   background: #212121;
 }
 
-/* line 162, scss/objects/_footer.scss */
+/* line 161, scss/objects/_footer.scss */
 .flexGRID .row .col_1,
 .flexGRID .row .col_2,
 .flexGRID .row .col_3,
@@ -1355,14 +1355,14 @@ body .wrapper:first-child {
   border-radius: 5px;
 }
 
-/* line 177, scss/objects/_footer.scss */
+/* line 176, scss/objects/_footer.scss */
 .flexGRID .row:first-child .col_12 {
   color: #FFF;
   background: none;
   padding: 0;
 }
 
-/* line 182, scss/objects/_footer.scss */
+/* line 181, scss/objects/_footer.scss */
 .flexGRID .row:first-child .col_12 h1 {
   font-size: 32px;
   margin-bottom: 2%;
