LC-833 updates icons atom with new icons

--- a/source/_patterns/00-atoms/04-images/07-icons.mustache
+++ b/source/_patterns/00-atoms/04-images/07-icons.mustache
@@ -1,16 +1,71 @@
-<ul class="icons inline-list" style="background-color: #474747; padding: 1em;">
-	<!-- <li class="icon-twitter"></li>
-	<li class="icon-facebook"></li>
-	<li class="icon-stumbleupon"></li>
-	<li class="icon-linkedin"></li>
-	<li class="icon-pinterest"></li>
-	<li class="icon-google-plus"></li>
-	<li class="icon-youtube"></li>
-	<li class="icon-feed"></li>
-	<li class="icon-search"></li>
-	<li class="icon-play"></li> -->
-	<li><img src="../../images/facebook_icon.png"></li>
-	<li><img src="../../images/feedback_icon.png"></li>
+<ul class="icons inline-list" >
+	<li><img src="../../images/icons/icon-alarm.png"></li>
+	<li><img src="../../images/icons/icon-arrowDown.png"></li>
+	<li><img src="../../images/icons/icon-arrowUp.png"></li>
+	<li><img src="../../images/icons/icon-bubble.png"></li>
+	<li><img src="../../images/icons/icon-bulb.png"></li>
+	<li><img src="../../images/icons/icon-bullhorn.png"></li>
+	<li><img src="../../images/icons/icon-calendar.png"></li>
+	<li><img src="../../images/icons/icon-cc.png"></li>
+	<li><img src="../../images/icons/icon-checkmark.png"></li>
+	<li><img src="../../images/icons/icon-chrome.png"></li>
+	<li><img src="../../images/icons/icon-clock.png"></li>
+	<li><img src="../../images/icons/icon-cloud.png"></li>
+	<li><img src="../../images/icons/icon-code.png"></li>
+	<li><img src="../../images/icons/icon-cogs.png"></li>
+	<li><img src="../../images/icons/icon-css3.png"></li>
+	<li><img src="../../images/icons/icon-database.png"></li>
+	<li><img src="../../images/icons/icon-download.png"></li>
+	<li><img src="../../images/icons/icon-earth.png"></li>
+	<li><img src="../../images/icons/icon-email.png"></li>
+	<li><img src="../../images/icons/icon-embed.png"></li>
+	<li><img src="../../images/icons/icon-facebook.png"></li>
+	<li><img src="../../images/icons/icon-Firefox.png"></li>
+	<li><img src="../../images/icons/icon-flickr.png"></li>
+	<li><img src="../../images/icons/icon-GitHub.png"></li>
+	<li><img src="../../images/icons/icon-globe.png"></li>
+	<li><img src="../../images/icons/icon-googlePlus.png"></li>
+	<li><img src="../../images/icons/icon-grid.png"></li>
+	<li><img src="../../images/icons/icon-handicap.png"></li>
+	<li><img src="../../images/icons/icon-IE.png"></li>
+	<li><img src="../../images/icons/icon-info.png"></li>
+	<li><img src="../../images/icons/icon-key.png"></li>
+	<li><img src="../../images/icons/icon-lamp.png"></li>
+	<li><img src="../../images/icons/icon-leftArrow.png"></li>
+	<li><img src="../../images/icons/icon-linkedin.png"></li>
+	<li><img src="../../images/icons/icon-localSearch.png"></li>
+	<li><img src="../../images/icons/icon-location.png"></li>
+	<li><img src="../../images/icons/icon-mail.png"></li>
+	<li><img src="../../images/icons/icon-newtab.png"></li>
+	<li><img src="../../images/icons/icon-Opera.png"></li>
+	<li><img src="../../images/icons/icon-park.png"></li>
+	<li><img src="../../images/icons/icon-phone.png"></li>
+	<li><img src="../../images/icons/icon-print.png"></li>
+	<li><img src="../../images/icons/icon-quotesLeft.png"></li>
+	<li><img src="../../images/icons/icon-quotesRight.png"></li>
+	<li><img src="../../images/icons/icon-rightArrow.png"></li>
+	<li><img src="../../images/icons/icon-rocket.png"></li>
+	<li><img src="../../images/icons/icon-rss.png"></li>
+	<li><img src="../../images/icons/icon-safari.png"></li>
+	<li><img src="../../images/icons/icon-search.png"></li>
+	<li><img src="../../images/icons/icon-sharethis.png"></li>
+	<li><img src="../../images/icons/icon-sign.png"></li>
+	<li><img src="../../images/icons/icon-skype.png"></li>
+	<li><img src="../../images/icons/icon-star_79.png"></li>
+	<li><img src="../../images/icons/icon-thumbsDown.png"></li>
+	<li><img src="../../images/icons/icon-thumbsUp.png"></li>
+	<li><img src="../../images/icons/icon-tools.png"></li>
+	<li><img src="../../images/icons/icon-twitter.png"></li>
+	<li><img src="../../images/icons/icon-undo.png"></li>
+	<li><img src="../../images/icons/icon-upload.png"></li>
+	<li><img src="../../images/icons/icon-users.png"></li>
+	<li><img src="../../images/icons/icon-vimeo.png"></li>
+	<li><img src="../../images/icons/icon-wrench.png"></li>
+	<li><img src="../../images/icons/icon-yanyrd.png"></li>
+	<li><img src="../../images/icons/icon-youTube.png"></li>
+
+
+	<!-- <li><img src="../../images/feedback_icon.png"></li>
 	<li><img src="../../images/instagram_icon.png"></li>
 	<li><img src="../../images/linkedin_icon.png"></li>
 	<li><img src="../../images/localsearch_icon.png"></li>
@@ -21,5 +76,6 @@
 	<li><img src="../../images/rss_icon.png"></li>
 	<li><img src="../../images/sharethis_icon.png"></li>
 	<li><img src="../../images/twitter_icon.png"></li>
-	<li><img src="../../images/weather_icon.png"></li>
+	<li><img src="../../images/weather_icon.png"></li> -->
 </ul>
+
