--- a/source/css/scss/objects/_icons.scss
+++ b/source/css/scss/objects/_icons.scss
@@ -124,7 +124,7 @@
 	margin-right: $pad-half;
 }
 
-.icons img {
-	height: 1.5em;
-	margin: 0.2em;
-}
+// .icons img {
+// 	height: 1.5em;
+// 	margin: 0.2em;
+// }
